force-app/main/default/objects/Account/fields/Estimated_Country__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Country__c</fullName>
    <label>Estimated Country</label>
    <length>5</length>
    <type>Text</type>
</CustomField>