force-app/main/default/objects/Account/fields/ID_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Document_Number__c</fullName>
    <label>ID Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>