force-app/main/default/objects/Account/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <formula>IF( Total_Exposure__c  &gt; 150000, &quot;High Risk&quot;,
  IF(Total_Exposure__c &gt;= 50000, &quot;Medium Risk&quot;,
    &quot;Low Risk&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>