force-app/main/default/objects/Account/fields/Total_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure__c</fullName>
    <label>Total Exposure</label>
    <summarizedField>Loan_Request__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Loan_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Request__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>